testdata/scripts/repeated_function_param.txt
! gunk generate ./p1
stderr 'error: .*p1/p1.gunk:9:2: parameter type should not be repeated'

! gunk generate ./p2
stderr 'error: .*p2/p2.gunk:9:2: parameter type should not be repeated'

-- go.mod --
module testdata.tld/util
-- .gunkconfig --
-- p1/p1.gunk --
package util

type Message struct {
	Msg string `pb:"1"`
}

type Util interface {
	// Echo echoes a message.
	Echo(Message) []Message
}
-- p2/p2.gunk --
package util

type Message struct {
	Msg string `pb:"1"`
}

type Util interface {
	// Echo echoes a message.
	Echo([]Message) Message
}
